# auth-academico

./: Dockerfile  auth.db  auth.py  auth_main.py  database.py  init.sql  models.py  pyproject.toml  routes.py  schemas.py
views/: home.py
